--- a/views/visitas_plan_visita_view.xml
+++ b/views/visitas_plan_visita_view.xml
@@ -49,6 +49,11 @@
                         <group>
                             <field name="refid_visitador" string="Visitador"  required="1"/>
                         </group>
+                        <group>
+                            <field name="refid_fracciones" string="Fracciones de la visita"  required="1"/>
+
+
+                        </group>
                     <hr/>
 
 
