--- a/views/visitas_menu_view.xml
+++ b/views/visitas_menu_view.xml
@@ -36,11 +36,21 @@
         <field name="domain"></field>
     </record>
 
+    <record id="action_alta_fracciones" model="ir.actions.act_window">
+        <field name="name">Fracciones de Orden de Visita</field>
+        <field name="res_model">visitas.cd.fracciones</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain"></field>
+    </record>
+
 
     <menuitem name="Visitas de Supervisión" id="visitas_menu" sequence="0" web_icon="visitassup,static/description/icon.png" />
 
         <menuitem name="Programación" id="programa_visita" parent="visitas_menu" action="action_programacion_visitas" sequence="1" groups="captura_programacion_group_user"/>
-        <menuitem name="Alta de visitadores" id="alta_visitador" parent="visitas_menu" action="action_alta_visitador" sequence="2" />
+
+        <menuitem name="Catalogo de visitas" id="alta_catalogo" parent="visitas_menu"  sequence="2" />
+            <menuitem name="Alta de visitadores" id="alta_visitador" parent="alta_catalogo" action="action_alta_visitador" sequence="1" />
+            <menuitem name="Alta de fracciones" id="alta_fracciones" parent="alta_catalogo" action="action_alta_fracciones" sequence="2" />
 
 </odoo>
 
