--- a/views/visitas_plan_visita_view.xml
+++ b/views/visitas_plan_visita_view.xml
@@ -17,12 +17,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-10">
-                            <strong>Institución:</strong> <field name="idiap"/>
+                            <strong>Institución:</strong> <field name="idiap"/><field name="noiap" invisible = "1"/>
                         </div>
                         <div class="col-md-2">
                             <button class="oe_stat_button customButtons"
                                         type="object"
-                                        name="btn_documento1"
+                                        name="doc_planvisita"
                                         icon="fa-print" >
                                        <div class="o_form_field o_stat_info">
                                         <span class="o_stat_text">
@@ -37,11 +37,16 @@
 
                     <br></br>
                     <hr/>
+                    <sheet>
+                      <div align="center" class="alert alert-info">
+                        <h3>Datos de la visita</h3>
+                        </div>
                         <group>
                             <field name="fecha_elaboracion" widget="date" required="1"/>
                         </group>
                         <group>
-                            <field name="refid_domicilios" widget="selection" required="1" string="Domicilio que será visitado"/>
+                            <field name="refid_domicilio" widget="selection" required="1" string="Domicilio que será visitado"
+                            domain="[('noiap', '=', noiap )]"/>
                         </group>
                         <group>
                             <field name="tipo_domicilio" string="Tipo de establecimiento" required="1"/>
@@ -50,13 +55,153 @@
                             <field name="refid_visitador" string="Visitador"  required="1"/>
                         </group>
                         <group>
-                            <field name="refid_fracciones" string="Fracciones de la visita"  required="1"/>
-
-
+                            <field name="tipo_visita" string="Tipo de Visita" required="1"/>
                         </group>
+                    </sheet>
+                <sheet>
+                    <notebook>
+                        <page string="Objeto y alcance de la visita">
+                            <sheet>
+                                  <div align="center" class="alert alert-info">
+                                    <h3>Objeto y alcance de la visita</h3>
+                                    </div>
+                                    <group>
+                                        <field name="refid_fracciones" string="Fracciones de la visita"  required="1"/>
+                                    </group>
+                            </sheet>
+                        </page>
+
+                        <page string="Datos generales de la IAP">
+                            <sheet>
+                                  <div align="center" class="alert alert-info">
+                                    <h3>Datos generales de la IAP</h3>
+                                    </div>
+                                    <group>
+                                        <field name="director_representante" string="Representante y/o director"  required="1"/>
+                                    </group>
+                            </sheet>
+                        </page>
+                        <page string="Objeto Social">
+                            <sheet>
+                                  <div align="center" class="alert alert-info">
+                                    <h3>Objeto social</h3>
+                                    </div>
+                                    <group>
+                                        <field name="objeto_social" string="Objeto Social"  required="1"/>
+                                    </group>
+                            </sheet>
+                        </page>
+
+                        <page string="Servicios asistenciales">
+                            <sheet>
+                                <div align="center" class="alert alert-info">
+                                    <h3>Servicios asistenciales</h3>
+                                </div>
+                                <group>
+                                    <field name="estatuto_asistencial" string="Artículo del estatuto"  required="1"/>
+                                </group>
+                                <group>
+                                    <field name="vista_asistencial" string="Última visita"  required="1"/>
+                                </group>
+                            </sheet>
+                        </page>
+
+                        <page string="Perfil población">
+                            <sheet>
+                                <div align="center" class="alert alert-info">
+                                    <h3>Perfil población</h3>
+                                </div>
+                                <group>
+                                    <field name="estatuto_poblacion" string="Artículo del estatuto"  required="1"/>
+                                </group>
+                                <group>
+                                    <field name="vista_poblacion" string="Última visita"  required="1"/>
+                                </group>
+                            </sheet>
+                        </page>
+                        <page string="Cuotas de recuperación">
+                            <sheet>
+                                 <div align="center" class="alert alert-info">
+                                    <h3>Cuotas de recuperación</h3>
+                                </div>
+                                <group>
+                                    <field name="ref_cuotas" string="Cuotas de Recuperación">
+                                        <form>
+                                            <group>
+                                                <field name="proyecto" string="Nombre Proyecto" required="1"/>
+                                                <field name="estuio_cuotas" string="Aplican Estudios o asignación" required="1"/>
+                                                <field name="tabulador" string="Cuenta con tabulador" required="1"/>
+                                                <field name="montos" string="Montos vigentes" required="1"/>
+                                                <field name="exentos" string="Cuenta con usuarios" required="1"/>
+                                            </group>
+                                        </form>
+                                        <tree>
+                                                <field name="proyecto" string="Nombre Proyecto"/>
+                                                <field name="estuio_cuotas" string="Aplican Estudios o asignación"/>
+                                                <field name="tabulador" string="Cuenta con tabulador"/>
+                                                <field name="montos" string="Montos vigentes"/>
+                                                <field name="exentos" string="Cuenta con usuarios"/>
+                                        </tree>
+                                    </field>
+                                </group>
+                            </sheet>
+                        </page>
+                        <page string="Personal">
+                            <sheet>
+                               <div align="center" class="alert alert-info">
+                                    <h3>Personal</h3>
+                                </div>
+                               <group>
+                                   <group>
+                                   <field name="sueldos" string="Sueldos"  required="1"/>
+                                   </group>
+                                   <group></group>
+                               </group>
+                               <group>
+                                   <group>
+                                       <field name="asimilados" string="Asimilados al salario"  required="1"/>
+                                   </group>
+                                   <group></group>
+                               </group>
+                               <group>
+                                   <group>
+                                   <field name="honoraios" string="Honorarios"  required="1"/>
+                                   </group>
+                                   <group></group>
+                               </group>
+                               <group>
+                                   <group>
+                                       <field name="voluntarios" string="Voluntarios"  required="1"/>
+                                   </group>
+                                   <group></group>
+                               </group>
+                               <group>
+                                   <group>
+                                       <field name="social" string="Servicio Social"  required="1"/>
+                                   </group>
+                                   <group></group>
+                               </group>
+                               <group>
+                                   <group>
+                                       <field name="otros" string="Otros"  required="1"/>
+                                   </group>
+                                   <group></group>
+                               </group>
+                            </sheet>
+                        </page>
+                        <page string="Resultado de la visita">
+                            <sheet>
+                                  <div align="center" class="alert alert-info">
+                                    <h3>Resultado de la visita</h3>
+                                    </div>
+                                    <group>
+                                        <field name="resultado" string="Resultado"/>
+                                    </group>
+                            </sheet>
+                        </page>
+                    </notebook>
+                </sheet>
                     <hr/>
-
-
             </form>
         </field>
     </record>
