--- a/views/visitas_menu_view.xml
+++ b/views/visitas_menu_view.xml
@@ -48,12 +48,41 @@
         <field name="res_model">visitas.inmuebles</field>
         <field name="view_mode">tree,form</field>
     </record>
+
+    <!--CALENDARIO DE VISITAS -->
+    <record id="action_programacion_calendario_visitas" model="ir.actions.act_window">
+        <field name="name">Calendario de Programacion</field>
+        <field name="res_model">visitas.programacion</field>
+        <field name="view_mode">tree,form,calendar</field>
+    </record>
+
+        <record id="programacion_visitas_tree_view_action" model="ir.actions.act_window.view">
+                <field eval="10" name="sequence"/>
+                <field name="view_mode">tree</field>
+                <field name="view_id" ref="visitassup.visitas_programacion_calendario_tree_view"/>
+                <field name="act_window_id" ref="action_programacion_calendario_visitas"/>
+        </record>
+        <record id="programacion_visitas_form_view_action" model="ir.actions.act_window.view">
+                <field eval="10" name="sequence"/>
+                <field name="view_mode">form</field>
+                <field name="view_id" ref="visitassup.visitas_programacion_calendario_form_view"/>
+                <field name="act_window_id" ref="action_programacion_calendario_visitas"/>
+        </record>
+
+        <record id="programacion_visitas_calendar_view_action" model="ir.actions.act_window.view">
+                <field eval="10" name="sequence"/>
+                <field name="view_mode">calendar</field>
+                <field name="view_id" ref="visitassup.visitas_programacion_calendario_calendar_view"/>
+                <field name="act_window_id" ref="action_programacion_calendario_visitas"/>
+        </record>
     <menuitem name="Visitas de Supervisión" id="visitas_menu" sequence="0" web_icon="visitassup,static/description/icon.png"/>
-    <menuitem name="Programación" id="programa_visita" parent="visitas_menu" action="action_programacion_visitas" sequence="1" groups="captura_programacion_group_user"/>
-    <menuitem name="Catalogo de visitas" id="alta_catalogo" parent="visitas_menu" sequence="2" groups="alta_visitador_group_user"/>
-    <menuitem name="Alta de visitadores" id="alta_visitador" parent="alta_catalogo" action="action_alta_visitador" sequence="1"/>
-    <menuitem name="Alta de fracciones" id="alta_fracciones" parent="alta_catalogo" action="action_alta_fracciones" sequence="2"/>
-    <menuitem name="Establecimientos" id="alta_establecimiento" parent="alta_catalogo" action="action_alta_establecimiento" sequence="3"/>
+        <menuitem name="Programación" id="programa_visita" parent="visitas_menu" action="action_programacion_visitas" sequence="1" groups="captura_programacion_group_user"/>
+        <menuitem name="Calendario de Visitas" id="calendario_visita" parent="visitas_menu" action="action_programacion_calendario_visitas" sequence="3" groups="calendario_visitas_group_user"/>
+
+        <menuitem name="Catalogo de visitas" id="alta_catalogo" parent="visitas_menu" sequence="2" groups="alta_visitador_group_user"/>
+            <menuitem name="Alta de visitadores" id="alta_visitador" parent="alta_catalogo" action="action_alta_visitador" sequence="1"/>
+            <menuitem name="Alta de fracciones" id="alta_fracciones" parent="alta_catalogo" action="action_alta_fracciones" sequence="2"/>
+            <menuitem name="Establecimientos" id="alta_establecimiento" parent="alta_catalogo" action="action_alta_establecimiento" sequence="3"/>
 
 </odoo>
 
